--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "video-everyday",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "migrate-db-dev": "./node_modules/.bin/knex migrate:latest --env development",
     "migrate-db-production": "./node_modules/.bin/knex migrate:latest --env production",
@@ -35,7 +36,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rimraf": "^3.0.0",
-    "sharp": "^0.23.2",
+    "sharp": "^0.23.3",
     "signale": "^1.4.0",
     "sqlite3": "^4.1.0",
     "token": "^0.1.0",
@@ -52,7 +53,7 @@
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "rollup": "^1.27.0",
+    "rollup": "^1.27.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.2",
