--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "gulp": "gulp -f gulpfile.cjs"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "^3.2.4",
@@ -24,42 +23,35 @@
     "cookie-parser": "~1.4.4",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
-    "esm": "^3.2.25",
     "exif-reader": "^1.0.3",
     "express": "^4.17.1",
     "express-rev": "^0.1.2",
     "express-session": "^1.17.0",
     "fluent-ffmpeg": "^2.1.2",
     "forcedomain": "^2.0.0",
-    "gulp-concat": "^2.6.1",
     "knex": "^0.20.2",
     "mkdirp": "^0.5.1",
     "nunjucks": "^3.2.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "rimraf": "^3.0.0",
     "sharp": "^0.23.3",
     "signale": "^1.4.0",
-    "sqlite3": "^4.1.0",
-    "token": "^0.1.0",
-    "tooltip": "git+https://github.com/darsain/tooltip.git",
-    "uuid": "^3.3.3"
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "del": "^5.1.0",
+    "gulp-concat": "^2.6.1",
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.4.2",
     "gulp-nunjucks": "^5.0.1",
-    "gulp-replace": "^1.0.0",
     "gulp-rev": "^9.0.0",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "rollup": "^1.27.4",
+    "rollup": "^1.27.5",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-uglify": "^6.0.3",
     "tiny-lr": "^1.1.1",
     "vinyl-paths": "^3.0.1",
     "xo": "^0.25.3"
