--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "migrate-db-dev": "./node_modules/.bin/knex migrate:latest --env development",
-    "migrate-db-production": "./node_modules/.bin/knex migrate:latest --env production",
-    "seed-db-dev": "./node_modules/.bin/knex seed:run --env development",
-    "seed-db-production": "./node_modules/.bin/knex seed:run --env production",
+    "migrate-db-dev": "./node_modules/.bin/knex --knexfile knexfile.cjs migrate:latest --env development",
+    "migrate-db-production": "./node_modules/.bin/knex --knexfile knexfile.cjs migrate:latest --env production",
+    "seed-db-dev": "./node_modules/.bin/knex --knexfile knexfile.cjs seed:run --env development",
+    "seed-db-production": "./node_modules/.bin/knex --knexfile knexfile.cjs seed:run --env production",
     "start": "export NODE_ENV=development && nodemon src/server/server.js",
     "build": "./node_modules/gulp/bin/gulp.js build",
     "update-deps": "ncu -u",
     "test": "xo",
-    "gulp": "gulp -f gulpfile.cjs"
+    "gulp": "gulp -f gulpfile.cjs",
+    "reset": "rm db-development-video-everyday.sqlite  && npm run migrate-db-dev && export NODE_ENV=development && nodemon src/server/server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
