--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "update-deps": "ncu -u",
     "test": "xo",
     "gulp": "gulp -f gulpfile.cjs",
-    "reset": "rm db-development-video-everyday.sqlite  && npm run migrate-db-dev && export NODE_ENV=development && nodemon src/server/server.js"
+    "reset": "rm -rf ~/Downloads/video-everyday/segments/* && rm -rf ~/Downloads/video-everyday/thumbnails/* && rm db-development-video-everyday.sqlite  && npm run migrate-db-dev && export NODE_ENV=development && node src/server/server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "config": "^3.2.4",
+    "config": "^3.2.5",
     "connect-flash": "^0.1.1",
     "connect-session-knex": "^1.5.0",
     "cookie-parser": "~1.4.4",
@@ -30,12 +30,12 @@
     "express-session": "^1.17.0",
     "fluent-ffmpeg": "^2.1.2",
     "forcedomain": "^2.0.0",
-    "knex": "^0.20.4",
+    "knex": "^0.20.8",
     "mkdirp": "^0.5.1",
     "nunjucks": "^3.2.0",
     "passport": "^0.4.1",
     "rimraf": "^3.0.0",
-    "sharp": "^0.23.4",
+    "sharp": "^0.24.0",
     "signale": "^1.4.0",
     "sqlite3": "^4.1.1"
   },
@@ -50,10 +50,10 @@
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "rollup": "^1.27.14",
+    "rollup": "^1.29.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.3",
+    "rollup-plugin-terser": "^5.2.0",
     "tiny-lr": "^1.1.1",
     "vinyl-paths": "^3.0.1",
     "xo": "^0.25.3"
