--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "seed-db-dev": "./node_modules/.bin/knex --knexfile knexfile.cjs seed:run --env development",
     "seed-db-production": "./node_modules/.bin/knex --knexfile knexfile.cjs seed:run --env production",
     "start": "export NODE_ENV=development && nodemon src/server/server.js",
-    "build": "./node_modules/gulp/bin/gulp.js build",
     "update-deps": "ncu -u",
     "test": "xo",
     "gulp": "gulp -f gulpfile.cjs",
@@ -18,9 +17,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "config": "^3.2.5",
+    "config": "^3.3.0",
     "connect-flash": "^0.1.1",
-    "connect-session-knex": "^1.5.0",
+    "connect-session-knex": "^1.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
@@ -30,32 +29,33 @@
     "express-session": "^1.17.0",
     "fluent-ffmpeg": "^2.1.2",
     "forcedomain": "^2.0.0",
-    "knex": "^0.20.8",
+    "knex": "^0.20.11",
     "nunjucks": "^3.2.0",
     "passport": "^0.4.1",
-    "rimraf": "^3.0.1",
-    "sharp": "^0.24.0",
+    "rimraf": "^3.0.2",
+    "sharp": "^0.25.1",
     "signale": "^1.4.0",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "subtitle": "^2.0.3"
   },
   "devDependencies": {
     "@umaar/personal-eslint-config": "latest",
     "del": "^5.1.0",
     "gulp-concat": "^2.6.1",
     "gulp": "^4.0.2",
-    "gulp-nodemon": "^2.4.2",
+    "gulp-nodemon": "^2.5.0",
     "gulp-nunjucks": "^5.0.1",
     "gulp-rev": "^9.0.0",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "rollup": "^1.30.1",
+    "rollup": "^2.0.6",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-terser": "^5.3.0",
     "tiny-lr": "^1.1.1",
     "vinyl-paths": "^3.0.1",
-    "xo": "^0.25.3"
+    "xo": "^0.28.0"
   },
   "xo": {
     "extends": "./node_modules/@umaar/personal-eslint-config/rules.json"
