--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "forcedomain": "^2.0.0",
     "knex": "^0.20.11",
+    "moment": "^2.24.0",
     "nunjucks": "^3.2.0",
     "passport": "^0.4.1",
     "rimraf": "^3.0.2",
