MIgrate to makefile over NPM scripts, simplify knexfile, improve gulpfile, use custom revision manifest middleware, update readme

--- a/package.json
+++ b/package.json
@@ -3,17 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
-    "migrate-db-dev": "./node_modules/.bin/knex --knexfile knexfile.cjs migrate:latest --env development",
-    "migrate-db-production": "./node_modules/.bin/knex --knexfile knexfile.cjs migrate:latest --env production",
-    "seed-db-dev": "./node_modules/.bin/knex --knexfile knexfile.cjs seed:run --env development",
-    "seed-db-production": "./node_modules/.bin/knex --knexfile knexfile.cjs seed:run --env production",
-    "start": "export NODE_ENV=development && nodemon src/server/server.js",
-    "update-deps": "ncu -u",
-    "test": "xo",
-    "gulp": "gulp -f gulpfile.cjs",
-    "reset": "rm -rf ~/Downloads/video-everyday/segments/* && rm -rf ~/Downloads/video-everyday/thumbnails/* && rm db-development-video-everyday.sqlite  && npm run migrate-db-dev && export NODE_ENV=development && node src/server/server.js"
-  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -25,7 +14,6 @@
     "dotenv": "^8.2.0",
     "exif-reader": "^1.0.3",
     "express": "^4.17.1",
-    "express-rev": "^0.1.2",
     "express-session": "^1.17.1",
     "fluent-ffmpeg": "^2.1.2",
     "forcedomain": "^2.0.0",
@@ -42,12 +30,13 @@
   "devDependencies": {
     "@umaar/personal-eslint-config": "^1.0.2",
     "del": "^5.1.0",
-    "gulp-concat": "^2.6.1",
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.5.0",
     "gulp-nunjucks": "^5.0.1",
     "gulp-rev": "^9.0.0",
     "gulp-rev-delete-original": "^0.2.3",
+    "gulp-rev-rewrite": "^3.0.3",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "rollup": "^2.7.2",
