--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "express-session": "^1.17.1",
     "fluent-ffmpeg": "^2.1.2",
     "forcedomain": "^2.0.0",
-    "knex": "^0.21.1",
+    "knex": "^0.21.2",
     "moment": "^2.27.0",
     "nunjucks": "^3.2.1",
     "passport": "^0.4.1",
     "rimraf": "^3.0.2",
     "sharp": "^0.25.4",
     "signale": "^1.4.0",
+    "slugify": "^1.4.4",
     "sqlite3": "^5.0.0",
     "subtitle": "^2.0.3"
   },
@@ -39,7 +40,7 @@
     "gulp-rev-rewrite": "^3.0.3",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
-    "rollup": "^2.21.0",
+    "rollup": "^2.22.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^6.1.0",
